kubernetes/applications/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/part-of: homeassistant

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - homeassistant.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: homeassistant
          port: 8123
          weight: 1
